Fixed spacing and added link to top level Patent Link.

--- a/src/index.css
+++ b/src/index.css
@@ -70,13 +70,14 @@ body {
   font-size: 1.25rem;
   font-weight: bold;
   margin-top: 0;
+  line-height: 1;
 }
 
 .paragraph {
   font-family: expo-sans-pro, sans-serif;
   line-height: normal;
   line-height: 1.8rem;
-  font-size: 1.05rem;
+  font-size: 1rem;
 }
 .paragraph:not(:last-child) {
   margin-bottom: 2.2rem;
@@ -119,8 +120,8 @@ body {
 
 .small-space {
   margin: 0;
-  padding-top: 0.25rem;
-  font-size: 1.1rem;
+  padding-top: 0.05rem;
+  font-size: 1rem;
 }
 
 .btn,
