--- a/src/widgets/Contact/Contact.style.scss
+++ b/src/widgets/Contact/Contact.style.scss
@@ -187,11 +187,11 @@
   flex-direction: row;
 }
 .row:not(:last-child) {
-  margin-bottom: 5rem;
+  margin-bottom: 2rem;
 }
 @media only screen and (max-width: 960px) {
   .row:not(:last-child) {
-    margin-bottom: 5rem;
+    margin-bottom: 2rem;
   }
 }
 .row::after {
