--- a/src/widgets/RetRam/History/History.style.scss
+++ b/src/widgets/RetRam/History/History.style.scss
@@ -19,7 +19,7 @@
   li {
     font-size: 1.1rem;
     font-weight: bold;
-    padding: 0.5rem;
+    padding: 0.05rem;
     margin: 2rem 0 0 0;
   }
 }
